--- a/index.html
+++ b/index.html
@@ -5,8 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year New Me</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans:ital,wght@0,400;0,500;0,800;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/249b13431b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <header></header>
+    <!-- Header part start -->
+    <header class="header">
+      <div class="header-container">
+        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+        <p class="banner-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <button class="btn-primary">Contact Us</button>
+      </div>
+    </header>
+    <main>
+      <!-- My failure of previous section -->
+      <section class="failure-container">
+        <div class="failure-image">
+          <img src="./images/person.png" alt="" />
+        </div>
+        <div class="failure-info">
+          <h2 class="failure-title">My failures of previous year</h2>
+          <p class="failure-description">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief, is not
+            simply.
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary is not simply.
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary to is not simply.
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary to popular belief, is not
+            simply.
+          </p>
+          <p class="coz">
+            <i class="fa-solid fa-check"></i> Contrary belief, is not simply.
+          </p>
+        </div>
+      </section>
+      <!-- My Plans -->
+      <section class="my-plans">
+        <div class="my-plans-title">
+          <h2 class="failure-title">My Plans</h2>
+        </div>
+        <div class="my-plans-info">
+          <div class="plans">
+            <img src="./images/icons/web.png" alt="" />
+            <h3 class="plans-title">Web Development</h3>
+            <p class="plans-description">I want to start</p>
+          </div>
+          <div class="plans">
+            <img src="./images/icons/js.png" alt="" />
+            <h3 class="plans-title">Javascript</h3>
+            <p class="plans-description">I want to learn</p>
+          </div>
+          <div class="plans">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h3 class="plans-title">Smoking Habit</h3>
+            <p class="plans-description">I want to end</p>
+          </div>
+          <div class="plans">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h3 class="plans-title">ecommerce</h3>
+            <p class="plans-description">I want to develop</p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
