--- a/index.html
+++ b/index.html
@@ -94,7 +94,38 @@
           </div>
         </div>
       </section>
+      <!-- mindset section -->
+      <section class="mindset">
+        <div class="mindset-info">
+          <h2 class="mindset-title">
+            Awlays keep a positive <br />
+            mindset
+          </h2>
+          <button class="btn-secondary">Call Now</button>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <!-- Footer Area Start-->
+    <footer>
+      <div class="footer-column">
+        <h1 class="footer-title">Future</h1>
+        <p class="footer-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
+        <p class="footer-contact">Email : info@gmail.com</p>
+        <p class="footer-contact">Phone : 01500 00 00 00</p>
+        <img src="./images/icons/fb.png" alt="" class="footer-icon" />
+        <img src="./images/icons/twitter.png" alt="" class="footer-icon" />
+        <img src="./images/icons/youtube.png" alt="" class="footer-icon" />
+      </div>
+      <div class="footer-column">
+        <h1 class="footer-title2">Subscribe</h1>
+        <input class="email" type="email" placeholder="   Enter Your Email" />
+        <br />
+        <button class="btn-secondary-footer">Subscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
